Added Image to Website

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<img src="img/p1-persona.png">
+	<img src="img/p1-image.png">
 
 	<script type="text/javascript" src="js/scripts.js"></script>
 
