--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <head>
 	<title>P1: Persona</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
 </head>
+
+<header>
+	<div class="nav">
+		<img src="img/logo_edit.png" id="logo">
+	</div>
+</header>
+
 <body>
-
-	<img src="img/p1-image.png">
-
+	<div class="persona">
+		<img src="img/p1-image.png" alt="Austin Images">
+	</div>
 	<script type="text/javascript" src="js/scripts.js"></script>
 
 </body>
